# SYsU-lang-tester-perfermance

./: CMakeLists.txt
.github/workflows/: cmake.yml
performance/: CMakeLists.txt
performance_test2021-private/: CMakeLists.txt  brainfuck-pi-nerf.sysu.c
performance_test2021-public/: CMakeLists.txt  conv1.sysu.c  median2.sysu.c
performance_test2022-private/: 02_mv2.sysu.c  03_sort1.sysu.c  04_spmv1.sysu.c  CMakeLists.txt  derich1.sysu.c  large_loop_array_1.sysu.c  large_loop_array_2.sysu.c  large_loop_array_3.sysu.c  layernorm3.sysu.c  matmul2.sysu.c  recursion_fabonacci-1.sysu.c  recursion_fabonacci-2.sysu.c  recursion_fabonacci-3.sysu.c  recursive_call_1.sysu.c  recursive_call_2.sysu.c  recursive_call_3.sysu.c  vector_mul2.sysu.c
performance_test2022-public/: CMakeLists.txt  floyd-1.sysu.c  gameoflife-gosper.sysu.c  gameoflife-p61glidergun.sysu.c  shuffle0.sysu.c  sl1.sysu.c  stencil0.sysu.c  stencil1.sysu.c  transpose1.sysu.c
